Changes in image subtitles

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
         </article>
 
+        <!-- My work section contains all the work images with link to all the works -->
         <article id="MyWork" class="ArticleTitle">      
             <section class="Article-h1">
                 <h1> Work </h1>
@@ -99,10 +100,10 @@
                     <div id="work3" class="work3-5">
 
                         <div class="workDescr">
-                            <h2>Flex</h2>
+                            <h2>CSS Snippets</h2>
                             <p>HTML/CSS</p>
                         </div>
-                        <a href="">
+                        <a href=" https://best15.github.io/CSS-snippets--Flexbox/">
                         <img id="workscreenshot" src="./Images/01-app-desktop.png" alt="Webpage title as CSS snippet cheatsheet,contains 6 boxes with different Css cheatsheets">
                         </a>
                     </div>
@@ -122,7 +123,7 @@
                     <div id="work5" class="work3-5">
                         
                         <div class="workDescr">
-                            <h2>Git</h2>
+                            <h2>Git Conflicts</h2>
                             <p>HTML/CSS</p>
                         </div>
                         <a href="https://github.com/best15/Git">
@@ -134,6 +135,8 @@
 
         </article>
 
+
+        <!-- Contact me section -->
         <article id="ContactMe" class="ArticleTitle">
             <div class="Article-h1">
                 <h1>Contact</h1>
@@ -162,7 +165,7 @@
         </article>
     </main>
 
-
+<!-- Footer section -->
     <footer>
        <h2>&copy; Copyright Sarad </h2> 
     </footer>
