Adding images in readme

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <h2>Portfolio</h2>
                         <p>HTML/CSS</p>
                     </div>
-                    <a href=" https://best15.github.io/MyPortfolio/.">
+                    <a href=" https://best15.github.io/my-portfolio/">
                     <img id="work1screenshot"
                     src="./Images/Portfolio.jpg" alt="Portfolio Of saradchhetri with personal image,work related images and contact details.">
                      </a>    
@@ -92,7 +92,7 @@
                             <p>HTML/CSS</p>
                         </div>
 
-                        <a href="https://best15.github.io/HomeAssignment01/">
+                        <a href=" https://best15.github.io/code-refractor/">
                         <img id="workscreenshot" src="https://raw.githubusercontent.com/urbantrout/refactor-css/master/img/refactor.gif" alt="Css code with code refractor example">
                         </a>
 
@@ -103,7 +103,7 @@
                             <h2>CSS Snippets</h2>
                             <p>HTML/CSS</p>
                         </div>
-                        <a href=" https://best15.github.io/CSS-snippets--Flexbox/">
+                        <a href=" https://best15.github.io/CSS-snippets-flexbox/">
                         <img id="workscreenshot" src="./Images/01-app-desktop.png" alt="Webpage title as CSS snippet cheatsheet,contains 6 boxes with different Css cheatsheets">
                         </a>
                     </div>
@@ -116,7 +116,7 @@
                             <h2>Landing Page</h2>
                             <p>HTML/CSS</p>
                         </div>
-                        <a href="https://best15.github.io/Mini-Project-Landing-page/">
+                        <a href="https://best15.github.io/landingpage/">
                         <img id="workscreenshot" src="./Images/LandingPage.jpg" alt="A sample website with boats image at center, contact form at the bottom and header and footer">
                         </a>
                     </div>
@@ -126,7 +126,7 @@
                             <h2>Git Conflicts</h2>
                             <p>HTML/CSS</p>
                         </div>
-                        <a href="https://github.com/best15/Git">
+                        <a href="https://github.com/best15/git-commit-push-conflicts">
                         <img id="workscreenshot" src="./Images/gitImage.png" alt="White and Red color background with git written with git logo">
                         </a>
                     </div>
@@ -138,19 +138,17 @@
 
         <!-- Contact me section -->
         <article id="ContactMe" class="ArticleTitle">
-            <div class="Article-h1">
+            <section class="Article-h1">
                 <h1>Contact</h1>
                 <h1>Me</h1>
-            </div>
+            </section>
 
-            <div class="contactlinks">
+            <section class="contactlinks">
                 <ul>
                     <li>
                         <a href="">04-1111-2222</a>
                     </li>
-                    <li>
-                        <a href="">Sarad.com</a>
-                    </li>
+                    
                     <li>
                         <a href="">Github</a>
                     </li>
@@ -161,7 +159,7 @@
                         <a href="">Gmail</a>
                     </li>
                 </ul>
-            </div>
+            </section>
         </article>
     </main>
 
