Final changes with two new work screenshot added and bordercol

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </div>
 
                         <a href=" https://best15.github.io/code-refractor/">
-                        <img id="workscreenshot" src="https://raw.githubusercontent.com/urbantrout/refactor-css/master/img/refactor.gif" alt="Css code with code refractor example">
+                        <img id="workscreenshot" src="./Images/coderefractor.jpg" alt="Website section with pictures and contents about SEO, Online Reputation Management and Lead generation">
                         </a>
 
                     </div>
@@ -104,7 +104,7 @@
                             <p>HTML/CSS</p>
                         </div>
                         <a href=" https://best15.github.io/CSS-snippets-flexbox/">
-                        <img id="workscreenshot" src="./Images/01-app-desktop.png" alt="Webpage title as CSS snippet cheatsheet,contains 6 boxes with different Css cheatsheets">
+                        <img id="workscreenshot" src="./Images/csssnippets.jpg" alt="Webpage title as CSS snippet cheatsheet,contains 6 boxes with different Css cheatsheets">
                         </a>
                     </div>
                 </div>
