Changes in contactlinks of html page

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
                  <li>
                     <a href="#ContactMe">Contact Me</a>
                  </li>
-                 <li>
-                    <a href="#MyResume">Resume</a>
-                 </li>
+                 
              </ul>
 
         </nav>   
@@ -36,7 +34,7 @@
     
 <!-- Hero Section/Perosnal Image -->
     <section class="hero">
-        <img src="./Images/PersonalImage.jpg" alt="Image of SaradChhetri with glass and hat beside Rock">
+        <img src="./Images/PersonalImage.jpg" alt="Personal image of sarad beside red rock">
         <h2 class="subtitle">Hey, What's up</h2>
 
     </section>
@@ -156,7 +154,7 @@
                         <a href="https://www.facebook.com/sarad.kshetri">Facebook</a>
                     </li>
                     <li>
-                        <a href="https://www.gmail.com/">Gmail</a>
+                        <a href="#">Email:sarad@email.com</a>
                     </li>
                 </ul>
             </section>
